# Decision-making-AHP

./: .gitignore  AHP.h  CMakeLists.txt  README.md  library.h  scratch2.json
res/: company_hiring.json  scratch.json  scratch2.json  wikipedia_validation.json
src/: AHP.cpp  AHP.h  main.cpp  test.hpp
src/AHP/: AHPSolver.cpp  AHPSolver.hpp  JsonContainer.cpp  JsonContainer.hpp  JsonParser.cpp  JsonParser.hpp  PriorityMatrix.cpp  PriorityMatrix.hpp
src/tests/: ahpTests.cpp  ahpTests.h
